--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -44,7 +44,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
         environment-file: devtools/conda-envs/test_env.yaml
 
-        channels: defaults
+        # channels: defaults
 
         activate-environment: test
         auto-update-conda: false
@@ -52,6 +52,12 @@ jobs:
         show-channel-urls: true
 
     - name: Install package
+	git clone https://github.com/MolSSI/mmic
+        cd mmic && pip install . && cd .. && rm -rf mmic
+        git clone https://github.com/MolSSI/MMElemental
+        cd mmelemental && pip install . && cd .. && rm -rf MMElemental
+        git clone https://github.com/MolSSI/mmic_parmed
+        cd mmic_parmed && pip install . && cd .. && rm -rf mmic_parmed
 
       # conda setup requires this special shell
       shell: bash -l {0}
