--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -37,6 +37,10 @@ jobs:
         df -h
         ulimit -a
 
+    - name: Testing Dependencies
+      shell: bash
+      run: |
+        python -m pip install -U pytest pytest-cov codecov
 
     # More info on options: https://github.com/conda-incubator/setup-miniconda
     - uses: conda-incubator/setup-miniconda@v2
