--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -48,7 +48,10 @@ jobs:
         auto-activate-base: false
         show-channel-urls: true
 
-    - name: Install package
+    - name: Install package & its deps
+      # conda setup requires this special shell
+      shell: bash -l {0}
+      run: |
         git clone https://github.com/MolSSI/mmic
         cd mmic && pip install . && cd .. && rm -rf mmic
         git clone https://github.com/MolSSI/MMElemental
@@ -56,9 +59,6 @@ jobs:
         git clone https://github.com/MolSSI/mmic_parmed
         cd mmic_parmed && pip install . && cd .. && rm -rf mmic_parmed
 
-      # conda setup requires this special shell
-      shell: bash -l {0}
-      run: |
         python -m pip install . --no-deps
         conda list
 
