--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -55,7 +55,7 @@ jobs:
         git clone https://github.com/MolSSI/mmic
         cd mmic && pip install . && cd .. && rm -rf mmic
         git clone https://github.com/MolSSI/MMElemental
-        cd mmelemental && pip install . && cd .. && rm -rf MMElemental
+        cd MMElemental && pip install . && cd .. && rm -rf MMElemental
         git clone https://github.com/MolSSI/mmic_parmed
         cd mmic_parmed && pip install . && cd .. && rm -rf mmic_parmed
 
