--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -60,7 +60,9 @@ jobs:
         cd MMElemental && pip install . && cd .. && rm -rf MMElemental
         git clone https://github.com/MolSSI/mmic_parmed
         cd mmic_parmed && pip install . && cd .. && rm -rf mmic_parmed
-        
+        git clone https://github.com/MolSSI/mmic_docking
+        cd mmic_docking && pip install . && cd .. && rm -rf mmic_docking
+ 
         python -m pip install . --no-deps
         conda list
 
