--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,5 +3,6 @@ include MANIFEST.in
 include CODE_OF_CONDUCT.md
 include versioneer.py
 
-graft mmic_autodock
-global-exclude *.py[cod] __pycache__ *.so
+graft mmic_autodock_vina
+global-exclude *.py[cod] __pycache__ *.soinclude mmic_autodock_vina/_version.py
+include mmic_autodock_vina/_version.py
