add mmic_translator to deps

--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -56,6 +56,8 @@ jobs:
         cd parmed && pip install . && cd .. && rm -rf parmed
         git clone https://github.com/MolSSI/mmic
         cd mmic && pip install . && cd .. && rm -rf mmic
+        git clone https://github.com/MolSSI/mmic_translator
+        cd mmic_translator && pip install . && cd .. && rm -rf mmic_translator
         git clone https://github.com/MolSSI/MMElemental
         cd MMElemental && pip install . && cd .. && rm -rf MMElemental
         git clone https://github.com/MolSSI/mmic_parmed
