--- a/.lgtm.yml
+++ b/.lgtm.yml
@@ -1,12 +1,15 @@
 # Configure LGTM for this package
 
 extraction:
-  python:  # Configure Python
-    python_setup:  # Configure the setup
-      version: 3  # Specify Version 3
+  python:
+    python_setup:
+      version: 3
 path_classifiers:
   library:
     - versioneer.py  # Set Versioneer.py to an external "library" (3rd party code)
     - devtools/*
   generated:
     - mmic_autodock_vina/_version.py
+queries:
+- exclude: py/not-named-self # Blocks Pydantic's @validator not accepting `self` until a better fix can be found
+- exclude: py/missing-equals # Blocks Pydantic's equivalent decorator
