--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -19,8 +19,10 @@ dependencies:
   # Pip-only installs
   - pip:
     - codecov
-    - qcengine
     - pydantic
+    - qcengine
+    - qcelemental
     # mmelemental
     # mmic
+    # mmic_docking
     # mmic_translator
