--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -20,9 +20,13 @@ dependencies:
   - pip:
     - codecov
     - pydantic
-    - qcengine
-    - qcelemental
-    # mmelemental
-    # mmic
-    # mmic_docking
-    # mmic_translator
+    - git+https://github.com/andrew-abimansour/qcengine.git@execute
+    - git+https://github.com/andrew-abimansour/qcelemental.git@serial
+    - git+https://github.com/parmed/parmed.git
+    - git+https://github.com/MolSSI/mmic.git
+    - git+https://github.com/MolSSI/mmelemental.git
+    - git+https://github.com/MolSSI/mmic_translator.git
+    - git+https://github.com/MolSSI/mmic_parmed.git
+    - git+https://github.com/MolSSI/mmic_docking.git
+    - git+https://github.com/MolSSI/mmic_cmd.git
+    - git+https://github.com/MolSSI/mm_data.git
