--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -22,6 +22,7 @@ dependencies:
     - pydantic
     - git+https://github.com/andrew-abimansour/qcengine.git@execute
     - git+https://github.com/andrew-abimansour/qcelemental.git@serial
+    - git+https://github.com/molssi/cmselemental.git@dev
     - git+https://github.com/parmed/parmed.git
     - git+https://github.com/MolSSI/mmic.git
     - git+https://github.com/MolSSI/mmelemental.git
